--- a/src/components/BaseLayout.module.scss
+++ b/src/components/BaseLayout.module.scss
@@ -9,7 +9,9 @@ footer {
   color: $white;
   transition: all 400ms;
 
-  a, i, li {
+  a,
+  i,
+  li {
     color: $white;
     transition: color 400ms;
   }
@@ -29,7 +31,14 @@ footer {
   transition: all 400ms;
 }
 
-
+.scrollUpBtn {
+  background-color: aquamarine;
+  position: fixed;
+  bottom: 15px;
+  right: 20px;
+  height: 40px;
+  width: 40px;
+}
 //.dark {
 //  background-color: $dark;
 //  color: $white;
